Initial update of all relative paths See #4688

--- a/components/xsd-fu/cfg/2008-09vsWorking.cfg
+++ b/components/xsd-fu/cfg/2008-09vsWorking.cfg
@@ -1,6 +1,6 @@
 [schemas]
-old="../../Release/2008-09/V1/ome.xsd"
-new="../../Working/ome.xsd"
+old="../specification/Released-Schema/2008-09/V1/ome.xsd"
+new="../specification/InProgress/ome.xsd"
 
 [xpaths]
 /OME/Image/MicrobeamManipulation@Type=/OME/Experiment/MicrobeamManipulation@Type
