--- a/components/xsd-fu/example.cfg
+++ b/components/xsd-fu/example.cfg
@@ -1,8 +1,8 @@
 [schemas]
-old="../../Release/2008-09/V1/ome.xsd"
+old="../specification/Released-Schema/2008-09/V1/ome.xsd"
 # Optional namespace definition
 oldNS="xsd:"
-new="../../Working/ome.xsd"
+new="../specification/InProgress/ome.xsd"
 # Optional namespace definition
 newNS="xsd:"
 
