--- a/components/metakit/build.properties
+++ b/components/metakit/build.properties
@@ -8,7 +8,7 @@
 
 component.name           = metakit
 component.jar            = metakit.jar
-component.version        = 4.3.1
+component.version        = 4.3.2-DEV
 component.classpath      = ${artifact.dir}/loci-common.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
