--- a/components/ome-plugins/pom.xml
+++ b/components/ome-plugins/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>bio-formats-base</artifactId>
-    <version>4.3.1</version>
+    <version>4.3.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>ome_plugins</artifactId>
