--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>loci</groupId>
   <artifactId>bio-formats-base</artifactId>
-  <version>4.3.1</version>
+  <version>4.3.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>LOCI Software</name>
