Add user documentation links to the ImageJ menu and the image viewer.

--- a/components/loci-plugins/src/plugins.config
+++ b/components/loci-plugins/src/plugins.config
@@ -46,4 +46,6 @@ Plugins>LOCI, "LOCI Plugins Shortcut Window", loci.plugins.shortcut.ShortcutPane
 Plugins>LOCI, "-"
 Plugins>LOCI, "Update LOCI Plugins", loci.plugins.Updater("")
 
+Plugins>LOCI, "-"
+Plugins>LOCI, "Help", ij.plugin.BrowserLauncher("http://loci.wisc.edu/bio-formats/using-bio-formats")
 Help>About Plugins, "LOCI Plugins...", loci.plugins.About("")
