Updated OMERO JARs to 4.3.1. (cherry picked from commit 9cb1fe0591fd70d7acbb357d97f4381f54ff8a75)

--- a/components/ome-io/pom.xml
+++ b/components/ome-io/pom.xml
@@ -48,13 +48,8 @@
     </dependency>
     <dependency>
       <groupId>ome</groupId>
-      <artifactId>omero-client</artifactId>
-      <version>4.2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>ome</groupId>
-      <artifactId>omero-common</artifactId>
-      <version>4.2.0</version>
+      <artifactId>omero_client</artifactId>
+      <version></version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
