--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -15,8 +15,7 @@ merged-docs.classpath = ${lib.dir}/clibwrapper_jiio.jar:\
                         ${lib.dir}/netcdf-4.0.jar:\
                         ${lib.dir}/ome-java.jar:\
                         ${lib.dir}/ome-java-deprecated.jar:\
-                        ${lib.dir}/omero-client-4.2.0.jar:\
-                        ${lib.dir}/omero-common-4.2.0.jar:\
+                        ${lib.dir}/omero_client.jar:\
                         ${lib.dir}/slf4j-api-1.5.10.jar:\
                         ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                         ${lib.dir}/testng-5.11-jdk15.jar
@@ -69,8 +68,7 @@ ome-tools.libraries = commons-httpclient-2.0-rc2.jar \
                       ome-io.jar \
                       ome-java.jar \
                       ome_plugins.jar \
-                      omero-client-4.2.0.jar \
-                      omero-common-4.2.0.jar \
+                      omero_client.jar \
                       xmlrpc-1.2-b1.jar
 
 ### Bio-Formats command line tools bundle ###
