--- a/components/ome-io/build.properties
+++ b/components/ome-io/build.properties
@@ -13,7 +13,7 @@ component.classpath      = ${artifact.dir}/bio-formats.jar:\
                            ${artifact.dir}/loci-common.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/ome-java.jar:\
-                           ${lib.dir}/omero-client-4.2.0.jar:\
+                           ${lib.dir}/omero_client.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 component.java-version   = 1.5
@@ -23,8 +23,7 @@ component.resources-bin  = loci/ome/io/ome-logo.png
 component.resources-text =
 
 component.main-class     = loci.ome.io.OmeroReader
-component.runtime-cp     = ${component.classpath}:\
-                           ${lib.dir}/omero-common-4.2.0.jar
+component.runtime-cp     = ${component.classpath}
 
 
 # NB: do not include ${artifact.dir}/bio-formats.jar,
