--- a/jar/.classpath
+++ b/jar/.classpath
@@ -16,8 +16,7 @@
 	<classpathentry exported="true" kind="lib" path="netcdf-4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="ome-java-deprecated.jar"/>
 	<classpathentry exported="true" kind="lib" path="ome-java.jar"/>
-	<classpathentry exported="true" kind="lib" path="omero-client-4.2.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="omero-common-4.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="omero_client.jar"/>
     <classpathentry exported="true" kind="lib" path="perf4j-0.9.13.jar"/>
 	<classpathentry exported="true" kind="lib" path="serializer-2.7.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="slf4j-api-1.5.10.jar"/>
