--- a/components/ome-plugins/src/plugins.config
+++ b/components/ome-plugins/src/plugins.config
@@ -20,7 +20,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-Plugins>OME, "Download from OME or OMERO", loci.plugins.LociImporter("location=[OME server]")
+Plugins>OME, "Download from OMERO", loci.plugins.LociImporter("location=[OMERO]")
 Plugins>OME, "Upload to OME", loci.plugins.ome.LociUploader("")
 
 Help>About Plugins, "OME Plugins...", loci.plugins.ome.About("")
