Fix artifact ID for omero-client. (cherry picked from commit b7d009b82e2164aec177610309e710b8e9037ac4)

--- a/components/ome-io/pom.xml
+++ b/components/ome-io/pom.xml
@@ -48,7 +48,7 @@
     </dependency>
     <dependency>
       <groupId>ome</groupId>
-      <artifactId>omero_client</artifactId>
+      <artifactId>omero-client</artifactId>
       <version>4.3.1</version>
     </dependency>
     <dependency>
