--- a/components/forks/poi/pom.xml
+++ b/components/forks/poi/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>bio-formats-base</artifactId>
-    <version>4.3.2-SNAPSHOT</version>
+    <version>4.3.2</version>
   </parent>
 
   <artifactId>poi-loci</artifactId>
