--- a/components/ome-tools/pom.xml
+++ b/components/ome-tools/pom.xml
@@ -16,6 +16,7 @@
 
   <name>OME Tools bundle</name>
   <description>An all-in-one bundle of OME libraries.</description>
+  <url>http://ome-xml.org/wiki/OmePlugins</url>
   <inceptionYear>2006</inceptionYear>
 
   <licenses>
