Progress on running TestNG tests from Maven.
There are still problems, because there is a lot of custom hackery that
goes on with these tests:

  * For common, there is a @PARALLEL@ token that is nonstandard and
    throws off the test engine unless it gets replaced.
  * For metakit, there is a filename system property that is expected
    to be set ad hoc. As such, the tests are not true unit tests.
	* For bio-formats, two tests of NetCDFServiceTest (testAttributes and
		testVariables) mysteriously fail with whitespace problems (see
		below). However, strangely, these tests pass when run via ant.
  * For bio-formats and ome-io, the missing dependency tests are not
    included because they only pass when dependencies are missing.

The two whitespace test failures are as follows:
{{{
expected:</Product Name_GLOSDS> but was:</Product_Name_GLOSDS>
expected:</Raster Image #0> but was:</Raster_Image_0>
}}}

--- a/components/metakit/pom.xml
+++ b/components/metakit/pom.xml
@@ -40,6 +40,19 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>test/ome/metakit/utests/testng-template.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <developers>
     <developer>
       <id>melissa</id>
