Continuing scifio branching - ant rename
The ant project was renamed to a more appropriate, scifio.
This should also generate a scifio.jar

Also, a file that was not properly copied over in the split -
a 2010-2011 xsl - has been copied over.

--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -6,8 +6,8 @@
 # Download Apache Ant from http://ant.apache.org/.
 # Type "ant -p" for a list of targets.
 
-component.name           = loci-io-image
-component.jar            = loci-io-image.jar
+component.name           = scifio
+component.jar            = scifio.jar
 component.version        = 4.3-DEV
 component.classpath      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/loci-common.jar:\
