Added SciFIO to loci-tools
SciFIO should now be built as part of the tools
target, and is appropriately considered in the bio-formats targets as a dependency.

--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -53,6 +53,7 @@ loci-tools.libraries = bio-formats.jar \
                        ome-xml.jar \
                        poi-loci.jar \
                        serializer-2.7.1.jar \
+                       scifio.jar \
                        xalan-2.7.1.jar \
                        slf4j-api-1.5.10.jar \
                        slf4j-log4j12-1.5.10.jar \
