Moved CPPWrap from Bio-Formats to SciFIO
As SciFIO is lighter than Bio-Formats, it makes more
sense to wrap SciFIO with CPPWrap by default.  If users wish to wrap the
full bio-formats library, it can be done with manual CPPWrap use.

In addition to copying of files, the pom's for both project were
updated.

Also, the demo programs for CPPWrap - showinf and minimum_writer - had
their jar dependencies corrected to the SciFIO jar.

--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -90,6 +90,27 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>loci.maven.plugins</groupId>
+        <artifactId>cppwrap-maven-plugin</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <configuration>
+          <headerFile>cppwrap/header.txt</headerFile>
+          <conflictsFile>cppwrap/conflicts.txt</conflictsFile>
+          <coreFile>cppwrap/core.txt</coreFile>
+          <extrasFile>cppwrap/extras.txt</extrasFile>
+          <sourceDir>cppwrap</sourceDir>
+          <libraries>
+            <library>${project.groupId}:loci-common:jar:${project.version}</library>
+            <library>${project.groupId}:ome-xml:jar:${project.version}</library>
+          </libraries>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <developers>
     <developer>
       <id>mark</id>
