Updated loci-tools dependencies
The loci-tools component Maven project only needs to depend on scifio
now.

--- a/components/loci-tools/pom.xml
+++ b/components/loci-tools/pom.xml
@@ -30,7 +30,7 @@
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>bio-formats</artifactId>
+      <artifactId>scifio</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
