Updated ome-plugins dependencies
The ome-plugins component Maven and ant projects now depend only on
Scifio.

--- a/components/ome-plugins/pom.xml
+++ b/components/ome-plugins/pom.xml
@@ -29,7 +29,7 @@
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>bio-formats</artifactId>
+      <artifactId>scifio</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
