--- a/components/ome-plugins/build.properties
+++ b/components/ome-plugins/build.properties
@@ -9,7 +9,7 @@
 component.name           = ome_plugins
 component.jar            = ome_plugins.jar
 component.version        = 4.3.3-DEV
-component.classpath      = ${artifact.dir}/bio-formats.jar:\
+component.classpath      = ${artifact.dir}/scifio.jar:\
                            ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/loci_plugins.jar:\
                            ${artifact.dir}/ome-io.jar:\
