--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>forms</artifactId>
       <version>1.2.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.5.10</version>
+    </dependency>
 
     <dependency>
       <groupId>log4j</groupId>
