--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <!--
 build.xml
 
-Master ant build file for all Java software projects at LOCI.
+Master ant build file for Bio-Formats.
 Download Apache Ant from http://ant.apache.org/.
 Type "ant -p" for a list of targets.
 
@@ -154,8 +154,7 @@ Apache Jakarta POI
     Project URL:   http://jakarta.apache.org/poi/
     Notes:         Based on poi-2.5.1-final-20040804.jar, with bugfixes for OLE
                    v2 and memory efficiency improvements. Used by Bio-Formats
-                   for OLE support (cxd, ipw, oib, zvi). Used by VisBio
-                   overlays logic for XLS export feature.
+                   for OLE support (cxd, ipw, oib, zvi).
 
 ===============================================================================
 The following components are stubs of third party projects:
@@ -207,14 +206,13 @@ FindBugs Ant task
 JGoodies Forms
     JAR file:  forms-1.3.0.jar
     URL:       http://www.jgoodies.com/freeware/forms/index.html
-    Notes:     used for layout by VisBio, Data Browser and OME Notes
+    Notes:     used for layout by SciFIO, Data Browser and OME Notes
     License:   BSD
 
 ImageJ
     JAR file:  ij.jar
     URL:       http://rsb.info.nih.gov/ij/
-    Notes:     used by LOCI plugins for ImageJ and OME plugins for ImageJ;
-               bundled with VisBio to achieve ImageJ interconnectivity
+    Notes:     used by LOCI plugins for ImageJ and OME plugins for ImageJ
     License:   Public domain
 
 JAI ImageIO wrapper
@@ -227,7 +225,7 @@ JAI ImageIO wrapper
 JUnit
     JAR file:  junit-4.8.2.jar
     URL:       http://www.junit.org/
-    Notes:     unit testing framework used for a few VisBio unit tests
+    Notes:     unit testing framework used for a few unit tests
     License:   Common Public License
 
 Apache log4j
