Update version numbers to 4.3.3.

--- a/components/ome-io/build.properties
+++ b/components/ome-io/build.properties
@@ -8,7 +8,7 @@
 
 component.name           = ome-io
 component.jar            = ome-io.jar
-component.version        = 4.3.3-DEV
+component.version        = 4.3.3
 component.classpath      = ${artifact.dir}/bio-formats.jar:\
                            ${artifact.dir}/loci-common.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
