--- a/components/stubs/lwf-stubs/pom.xml
+++ b/components/stubs/lwf-stubs/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>bio-formats-base</artifactId>
-    <version>4.3.3-SNAPSHOT</version>
+    <version>4.3.3</version>
   </parent>
 
   <artifactId>lwf-stubs</artifactId>
