--- a/components/test-suite/build.xml
+++ b/components/test-suite/build.xml
@@ -97,6 +97,7 @@ Type "ant -p" for a list of targets.
         <pathelement path="${component.classpath}"/>
       </classpath>
       <classfileset file="${classes.dir}/${reader-test.class}"/>
+      <sysproperty key="testng.toplevel-config" value="${testng.toplevel-config}"/>
       <sysproperty key="testng.filename" value="${testng.filename}"/>
       <sysproperty key="testng.directory" value="${testng.directory}"/>
       <sysproperty key="testng.multiplier" value="${testng.multiplier}"/>
@@ -119,6 +120,7 @@ Type "ant -p" for a list of targets.
         <pathelement path="${component.classpath}"/>
       </classpath>
       <classfileset file="${classes.dir}/${reader-test.class}"/>
+      <sysproperty key="testng.toplevel-config" value="${testng.toplevel-config}"/>
       <sysproperty key="testng.filename" value="${testng.filename}"/>
       <sysproperty key="testng.directory" value="${testng.directory}"/>
       <sysproperty key="testng.multiplier" value="${testng.multiplier}"/>
@@ -141,6 +143,7 @@ Type "ant -p" for a list of targets.
         <pathelement path="${component.classpath}"/>
       </classpath>
       <classfileset file="${classes.dir}/${reader-test.class}"/>
+      <sysproperty key="testng.toplevel-config" value="${testng.toplevel-config}"/>
       <sysproperty key="testng.filename" value="${testng.filename}"/>
       <sysproperty key="testng.directory" value="${testng.directory}"/>
       <sysproperty key="testng.multiplier" value="${testng.multiplier}"/>
@@ -163,6 +166,7 @@ Type "ant -p" for a list of targets.
         <pathelement path="${component.classpath}"/>
       </classpath>
       <classfileset file="${classes.dir}/${reader-test.class}"/>
+      <sysproperty key="testng.toplevel-config" value="${testng.toplevel-config}"/>
       <sysproperty key="testng.filename" value="${testng.filename}"/>
       <sysproperty key="testng.directory" value="${testng.directory}"/>
       <sysproperty key="testng.multiplier" value="${testng.multiplier}"/>
@@ -185,6 +189,7 @@ Type "ant -p" for a list of targets.
         <pathelement path="${component.classpath}"/>
       </classpath>
       <classfileset file="${classes.dir}/${reader-test.class}"/>
+      <sysproperty key="testng.toplevel-config" value="${testng.toplevel-config}"/>
       <sysproperty key="testng.filename" value="${testng.filename}"/>
       <sysproperty key="testng.directory" value="${testng.directory}"/>
       <sysproperty key="testng.multiplier" value="${testng.multiplier}"/>
@@ -207,6 +212,7 @@ Type "ant -p" for a list of targets.
         <pathelement path="${component.classpath}"/>
       </classpath>
       <classfileset file="${classes.dir}/${reader-test.class}"/>
+      <sysproperty key="testng.toplevel-config" value="${testng.toplevel-config}"/>
       <sysproperty key="testng.filename" value="${testng.filename}"/>
       <sysproperty key="testng.directory" value="${testng.directory}"/>
       <sysproperty key="testng.multiplier" value="${testng.multiplier}"/>
