Catch TransformerException when transforming child nodes of XMLAnnotation.Value.
...instead of the previous approach, which was to only transform child
nodes of type Element.  This still prevents transformation failures when using
Saxon, but is also more lenient for parsers that allow transforming
top-level nodes that are not of type Element.

This is the outcome of a Skype discussion with Chris Allan on 4 November 2011.

--- a/components/xsd-fu/templates/Pojo_XMLAnnotation_update_Value.template
+++ b/components/xsd-fu/templates/Pojo_XMLAnnotation_update_Value.template
@@ -29,9 +29,12 @@
 				NodeList childNodeList = Value_nodeList.get(0).getChildNodes();
 				for (int i = 0; i < childNodeList.getLength(); i++)
 				{
-					if (childNodeList.item(i).getNodeType() == Node.ELEMENT_NODE) {
+					try {
 						t.transform(new javax.xml.transform.dom.DOMSource(
 							childNodeList.item(i)), sr);
+					}
+					catch (javax.xml.transform.TransformerException te) {
+						LOGGER.warn("Failed to transform node #" + i, te);
 					}
 				}
 				setValue(sw.toString().trim());
