--- a/components/metakit/build.xml
+++ b/components/metakit/build.xml
@@ -12,8 +12,26 @@ Type "ant -p"  for a list of targets.
   <import file="${root.dir}/ant/java.xml"/>
   <property file="build.properties"/>
 
-  <target name="test-file" depends="jar, compile-tests" description="run tests">
+  <target name="test" depends="jar, compile-tests" description="run tests">
     <!-- NOTE: Overrides default "test" target from java.xml -->
+    <copy tofile="${build.dir}/testng.xml"
+      file="${testng.xml.template}" overwrite="true">
+      <filterset>
+        <filter token="PARALLEL" value=""/> <!-- Disable parallelization -->
+      </filterset>
+    </copy>
+    <testng failureProperty="failedTest">
+      <classpath>
+        <pathelement location="${test-classes.dir}"/>
+        <pathelement location="${classes.dir}"/>
+        <pathelement path="${component.runtime-cp}"/>
+      </classpath>
+      <xmlfileset file="${build.dir}/testng.xml"/>
+    </testng>
+    <fail if="failedTest"/>
+  </target>
+
+  <target name="test-file" depends="jar, compile-tests" description="run tests">
     <copy tofile="${build.dir}/testng.xml"
       file="${testng.xml.template}" overwrite="true">
       <filterset>
