Tweak PARALLEL token filter.
This little hack allows Maven to run the TestNG tests without replacing
the token. There is merely a warning that "@PARALLEL@" is not a valid
value for the parallel attribute. But the tests run anyway with the
default value of false. Previously, Maven refused to run the tests due
to the XML being malformed.

--- a/components/common/build.xml
+++ b/components/common/build.xml
@@ -17,7 +17,8 @@ Type "ant -p"  for a list of targets.
     <copy tofile="${build.dir}/testng.xml"
       file="${testng.xml.template}" overwrite="true">
       <filterset>
-        <filter token="PARALLEL" value=""/> <!-- Disable parallelization -->
+        <!-- Disable parallelization -->
+        <filter token="PARALLEL" value="false"/>
       </filterset>
     </copy>
     <testng failureProperty="failedTest">
@@ -37,7 +38,8 @@ Type "ant -p"  for a list of targets.
     <copy tofile="${build.dir}/testng.xml"
       file="${testng.xml.template}" overwrite="true">
       <filterset>
-        <filter token="PARALLEL" value="parallel=&quot;classes&quot;"/>
+        <!-- Enable parallelization -->
+        <filter token="PARALLEL" value="classes"/>
       </filterset>
     </copy>
     <testng failureProperty="failedTest">
