--- a/components/scifio/build.xml
+++ b/components/scifio/build.xml
@@ -1,13 +1,13 @@
 <!--
 build.xml
 
-Ant build file for SciFIO project.
+Ant build file for SCIFIO project.
 Download Apache Ant from http://ant.apache.org/.
 Type "ant -p" for a list of targets.
 -->
 
 <project name="scifio" default="jar" basedir=".">
-  <description>Build file for SciFIO project</description>
+  <description>Build file for SCIFIO project</description>
   <property name="root.dir" location="../.."/>
   <import file="${root.dir}/ant/java.xml"/>
   <property file="build.properties"/>
