Update SCIFIO-related licenses to Simplified BSD
The simplified BSD license omits the third, superfluous non-endorsement
clause.

--- a/components/ome-xml/pom.xml
+++ b/components/ome-xml/pom.xml
@@ -20,8 +20,7 @@
 
   <licenses>
     <license>
-      <name>GPL 2 or later</name>
-      <url>http://www.gnu.org/licenses/gpl-2.0.txt</url>
+      <name>Simplified BSD</name>
       <distribution>repo</distribution>
     </license>
   </licenses>
