--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -22,7 +22,7 @@
 
   <licenses>
     <license>
-      <name>BSD</name>
+      <name>Simplified BSD</name>
       <distribution>repo</distribution>
     </license>
   </licenses>
