Fix Maven generation of loci_tools.jar
The resultant JAR is still substantially larger than the Ant version,
for two reasons:

  1. The Maven build uses different versions of some dependencies.
  2. The Maven build is more thorough about bundling all dependencies,
     including transitive ones, into the uber-jar.

--- a/components/loci-tools/pom.xml
+++ b/components/loci-tools/pom.xml
@@ -30,7 +30,7 @@
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>scifio</artifactId>
+      <artifactId>loci_plugins</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
