Do not link objects that have already been linked
If an object can reference multiple objects of the same type, then
before adding a reference to an object we must check if that object is
already referenced.  This prevents additional references to the same
object from being created on successive calls to link(...).

Closes #7017.

--- a/components/xsd-fu/templates/Pojo.template
+++ b/components/xsd-fu/templates/Pojo.template
@@ -323,7 +323,9 @@ ${customUpdatePropertyContent[prop.name]}
 			o_casted.link${klass.type}(this);
 {% end %}\
 {% if prop.maxOccurs > 1 %}\
-			${prop.javaInstanceVariableName}.add(o_casted);
+			if (!copyLinked${prop.javaMethodName}List().contains(o_casted)) {
+				${prop.javaInstanceVariableName}.add(o_casted);
+			}
 {% end %}\
 {% if prop.maxOccurs == 1 %}\
 			${prop.javaInstanceVariableName} = o_casted;
