Build changes for webstart incl. lib/keystore
Jars are now produced as "${artifact}-UNSIGNED.jar"
and then converted to the previous name by using
signjar. By default, the keystore available here
(valid for 1000 days) is used. Official builds
should use their own keystore.

--- a/components/xsd-fu/build.xml
+++ b/components/xsd-fu/build.xml
@@ -27,6 +27,10 @@
             <mapper type="regexp" from="(xsd_fu-.*?)-py(.*?).egg" to="xsd-fu.egg" />
         </move>
     </target>
+    <target name="install" depends="package">
+        <!-- Defining here to work around jar signing -->
+        <publishArtifact/>
+    </target>
 
     <target name="test-compile" description="No-op"/>
     <target name="test" description="No-op"/>
