Turn off default listeners for the 'test-automated' task
This prevents OutOfMemoryErrors during report generation, which caused
the build to fail even when all of the tests had passed.

--- a/components/test-suite/build.xml
+++ b/components/test-suite/build.xml
@@ -137,7 +137,7 @@ Type "ant -p" for a list of targets.
       annotations="Javadoc" groups="automated" testname="Automated tests"
       listener="loci.tests.testng.DotTestListener"
       suitename="LOCI software test suite"
-      failureProperty="failedTest">
+      failureProperty="failedTest" useDefaultListeners="false">
       <classpath>
         <pathelement location="${classes.dir}"/>
         <pathelement path="${component.classpath}"/>
