Do not copy the reference list when adding a link
Instead, use the instance variable directly.

--- a/components/xsd-fu/templates/Pojo.template
+++ b/components/xsd-fu/templates/Pojo.template
@@ -323,7 +323,7 @@ ${customUpdatePropertyContent[prop.name]}
 			o_casted.link${klass.type}(this);
 {% end %}\
 {% if prop.maxOccurs > 1 %}\
-			if (!copyLinked${prop.javaMethodName}List().contains(o_casted)) {
+			if (!${prop.javaInstanceVariableName}.contains(o_casted)) {
 				${prop.javaInstanceVariableName}.add(o_casted);
 			}
 {% end %}\
