Do not add back references that already exist
Just as in 8ee54ea, we do not want multiple references to the same object.

--- a/components/xsd-fu/templates/Pojo.template
+++ b/components/xsd-fu/templates/Pojo.template
@@ -381,7 +381,10 @@ ${customUpdatePropertyContent[prop.name]}
 {% if not prop.isBackReference and not fu.link_overridden(prop.name, klass.name) %}\
 		o.link${klass.type}(this);
 {% end %}\
-		return ${prop.javaInstanceVariableName}.add(o);
+		if (!${prop.javaInstanceVariableName}.contains(o)) {
+			return ${prop.javaInstanceVariableName}.add(o);
+		}
+		return false;
 	}
 
 	public boolean unlink${prop.javaMethodName}(${prop.javaType} o)
