OME build hooks
build.xml is called by the OME ./build.py-based build
system. The only two targets that are currently supported
are "dist" and "clean". "test" etc. will also need hooks.

"dist" calls the regular Bio-Formats build and then calls
out to ome.xml which re-distributes the jars basd on the
ivy.xml specification.

This logic can't sit in the build.xml file itself because
of at least one naming conflict (root.dir)

--- a/build.xml
+++ b/build.xml
@@ -308,9 +308,17 @@ Apache XML-RPC
     License:   Apache
 -->
 
-<project name="Bio-Formats" default="jars" basedir=".">
+<project name="Bio-Formats" default="jars" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
   <description>
     Master build file for all Java software projects at LOCI
   </description>
   <import file="ant/toplevel.xml"/>
+
+  <!-- OME-compatibility layer -->
+  <target name="dist" description="Hook for OME build to call Bio-Formats">
+    <ant target="tools"/>
+    <ant target="tools-ome"/>
+    <ant antfile="ome.xml" inheritRefs="false" inheritAll="false"/>
+  </target>
+
 </project>
