--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -55,6 +55,11 @@
       <version>1.2.1</version>
     </dependency>
     <dependency>
+      <groupId>net.imglib2</groupId>
+      <artifactId>imglib2</artifactId>
+      <version>2.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.5.10</version>
