--- a/components/ome-tools/pom.xml
+++ b/components/ome-tools/pom.xml
@@ -41,6 +41,7 @@
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
+          <appendAssemblyId>false</appendAssemblyId>
           <descriptors>
             <descriptor>assembly.xml</descriptor>
           </descriptors>
