Add 'eclipse' target

--- a/ivy.xml
+++ b/ivy.xml
@@ -17,7 +17,7 @@
   </publications>
   <dependencies defaultconfmapping="build,runtime->default">
     <!-- Internal -->
-    <dependency name="specification" rev="4.3.3-DEV-ice33" changing="true" conf="build,runtime->build"/>
+    <dependency name="specification" rev="${omero.version}" changing="true" conf="build,runtime->build"/>
     <!-- Deps -->
     <dependency org="bf-deps" name="xalan" rev="2.7.1"/>
     <dependency org="bf-deps" name="serializer" rev="2.7.1"/>
