--- a/build.xml
+++ b/build.xml
@@ -315,10 +315,16 @@ Apache XML-RPC
   <import file="ant/toplevel.xml"/>
 
   <!-- OME-compatibility layer -->
-  <target name="dist" description="Hook for OME build to call Bio-Formats">
+  <target name="dist" description="OME hook: build and publish Bio-Formats dist">
     <ant target="tools"/>
     <ant target="tools-ome"/>
     <ant antfile="ome.xml" inheritRefs="false" inheritAll="false"/>
+  </target>
+
+  <target name="test-compile" depends="compile-tests" description="OME hook: compile all tests"/>
+
+  <target name="eclipse" description="OME hook: create eclipse .classpath file">
+    <ant target="eclipse" antfile="ome.xml" inheritRefs="false" inheritAll="false"/>
   </target>
 
 </project>
