--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -58,7 +58,7 @@
     <dependency>
       <groupId>net.imglib2</groupId>
       <artifactId>imglib2</artifactId>
-      <version>20120321</version>
+      <version>2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
