--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -8,15 +8,13 @@
 
 component.name           = scifio
 component.jar            = scifio.jar
-component.version        = 4.4-DEV
+component.version        = 4.3-DEV
 component.classpath      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/lwf-stubs.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/imglib2.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/retrotranslator-runtime-1.2.9.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar:\
                            ${lib.dir}/JimiProClasses.jar
@@ -41,9 +39,8 @@ component.cp.no-xml      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/mdbtools-java.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/imglib2.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/retrotranslator-runtime-1.2.9.jar:\
+                           ${lib.dir}/netcdf-4.0.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
@@ -53,10 +50,9 @@ component.cp.no-jai      = ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/imglib2.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/retrotranslator-runtime-1.2.9.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
+                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from stubs.jar
@@ -65,8 +61,7 @@ component.cp.no-lurawave = ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/imglib2.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/retrotranslator-runtime-1.2.9.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
+                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
