Add license-maven-plugin configuration to POMs

--- a/components/autogen/pom.xml
+++ b/components/autogen/pom.xml
@@ -57,6 +57,14 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <configuration>
+          <licenseName>gpl_v2</licenseName>
+          <projectName>Bio-Formats autogen package for programmatically generating source code.</projectName>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
