--- a/components/metakit/pom.xml
+++ b/components/metakit/pom.xml
@@ -51,6 +51,14 @@
           </suiteXmlFiles>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <configuration>
+          <licenseName>gpl_v2</licenseName>
+          <projectName>OME Metakit package for reading Metakit database files.</projectName>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
