--- a/components/ome-io/pom.xml
+++ b/components/ome-io/pom.xml
@@ -94,6 +94,14 @@
           </suiteXmlFiles>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <configuration>
+          <licenseName>gpl_v2</licenseName>
+          <projectName>OME database I/O package for communicating with OME and OMERO servers.</projectName>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
