--- a/components/legacy/ome-notes/pom.xml
+++ b/components/legacy/ome-notes/pom.xml
@@ -58,6 +58,15 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <configuration>
+          <licenseName>gpl_v2</licenseName>
+          <projectName>OME Notes library for flexible organization and presentation of OME-XML
+metadata.</projectName>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
