--- a/components/common/pom.xml
+++ b/components/common/pom.xml
@@ -20,8 +20,8 @@
 
   <licenses>
     <license>
-      <name>GPL 2 or later</name>
-      <url>http://www.gnu.org/licenses/gpl-2.0.txt</url>
+      <name>Simplified BSD License</name>
+      <url>${license.server}/loci-common/license.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
