--- a/components/legacy/ome-editor/pom.xml
+++ b/components/legacy/ome-editor/pom.xml
@@ -21,8 +21,8 @@
 
   <licenses>
     <license>
-      <name>LGPL 2 or later</name>
-      <url>http://www.gnu.org/licenses/lgpl-2.0.txt</url>
+      <name>GPL 2 or later</name>
+      <url>http://www.gnu.org/licenses/gpl-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
