--- a/components/ome-xml/pom.xml
+++ b/components/ome-xml/pom.xml
@@ -21,8 +21,8 @@
 
   <licenses>
     <license>
-      <name>Simplified BSD</name>
-      <url>http://git.openmicroscopy.org/?p=bioformats.git;a=blob;f=components/ome-xml/LICENSE.txt;hb=HEAD</url>
+      <name>Simplified BSD License</name>
+      <url>${license.server}/ome-xml/license.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
