--- a/components/stubs/lwf-stubs/pom.xml
+++ b/components/stubs/lwf-stubs/pom.xml
@@ -21,8 +21,8 @@
 
   <licenses>
     <license>
-      <name>BSD</name>
-      <url>http://dev.loci.wisc.edu/svn/java/trunk/stubs/lwf-stubs/LICENSE.txt</url>
+      <name>Simplified BSD License</name>
+      <url>${license.server}/lwf-stubs/license.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
