--- a/components/autogen/build.xml
+++ b/components/autogen/build.xml
@@ -12,6 +12,14 @@ Type "ant -p" for a list of targets.
   <import file="${root.dir}/ant/java.xml"/>
   <property file="build.properties"/>
 
+  <target name="gen-original-meta-support" depends="compile"
+    description="generate docs for Bio-Formats original metadata support">
+    <java classname="OriginalMetadataAutogen"
+      classpath="${classes.dir}:${component.runtime-cp}" fork="true">
+      <arg value="${filelist}"/>
+    </java>
+  </target>
+
   <target name="gen-meta-support" depends="compile"
     description="generate docs for Bio-Formats metadata support">
     <exec executable="bash">
